# docsearch

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLEANUP_COMPLETE.md  CONTENT_TYPE_PROCESSING_COMPLETE.md  Cargo.toml  DOCKER.md  Dockerfile  Dockerfile.dev  IMPLEMENTATION_COMPLETE.md  JSON_RPC_MCP_PHASE_1_IMPLEMENTATION.md  MONOREPO.md  Makefile  README.md  RELEASE_NOTES.md  docker-compose.dev.yml  docker-compose.yml  package-lock.json  package.json  response-email.md  start-services.sh  test_jsonrpc_compliance.py  turbo.json
crates/cli/: Cargo.toml
crates/cli/src/: client.rs  config.rs  main.rs  output.rs
crates/cli/src/application/: container.rs  mod.rs
crates/cli/src/application/services/: cli_service.rs  mod.rs
crates/cli/src/commands/: collection.rs  config.rs  document.rs  index.rs  mod.rs  reindex.rs  search.rs  server.rs  status.rs
crates/cli/src/infrastructure/: mod.rs
crates/cli/src/infrastructure/config/: config_loader.rs  mod.rs
crates/cli/src/infrastructure/http/: api_client.rs  collection_client.rs  document_client.rs  index_client.rs  mod.rs  search_client.rs  server_client.rs
crates/cli/src/infrastructure/output/: formatters.rs  mod.rs
crates/zero-latency-api/: Cargo.toml  build.rs
crates/zero-latency-api/src/: endpoints.rs  lib.rs
crates/zero-latency-config/: Cargo.toml
crates/zero-latency-config/src/: lib.rs  loader.rs  models.rs  validation.rs
crates/zero-latency-core/: Cargo.toml  README.md
crates/zero-latency-core/src/: doc_id.rs  error.rs  lib.rs  models.rs  traits.rs  values.rs
crates/zero-latency-observability/: Cargo.toml
crates/zero-latency-observability/src/: health.rs  lib.rs  metrics.rs  tracing.rs
crates/zero-latency-search/: Cargo.toml
crates/zero-latency-search/examples/: cache_demo.rs  hybrid_search.rs  sprint_008_summary.rs  sprint_009_kickoff.rs
crates/zero-latency-search/src/: hybrid.rs  lib.rs  models.rs  services.rs  traits.rs  vector_search.rs
crates/zero-latency-search/src/bm25/: mod.rs  tantivy_adapter.rs
crates/zero-latency-search/src/cache/: cache_demo.rs  demo.rs  integration.rs  integration_fixed.rs  manager.rs  mod.rs  performance.rs
crates/zero-latency-search/src/evaluation/: dataset.rs  metrics.rs  mod.rs
crates/zero-latency-search/src/fusion/: deduplication.rs  mod.rs  provenance.rs  result_merger.rs  score_fusion.rs
crates/zero-latency-search/src/pipeline/: merge_step.rs  mod.rs
crates/zero-latency-search/src/query_expansion/: examples.rs  expansion.rs  mod.rs  strategies.rs
crates/zero-latency-vector/: Cargo.toml
crates/zero-latency-vector/src/: lib.rs  models.rs  services.rs  traits.rs
services/doc-indexer/: Cargo.toml  README.md
services/doc-indexer/legacy_backup/: advanced_chunker.rs  config.rs  document.rs  main.rs  observability.rs  qdrant_client.rs  quality_metrics.rs  query_enhancement.rs  result_ranking.rs  search_service.rs  vectordb_simple.rs  watcher_v2.rs
services/doc-indexer/src/: api_server.rs  chunking.rs  config.rs  core_placeholder.rs  document.rs  embedding_provider.rs  indexer.rs  lib.rs  main.rs  model_manager.rs  observability_simple.rs  qdrant_client.rs  search_service.rs  vector_db_trait.rs  vectordb.rs  vectordb_simple.rs  watcher.rs
services/doc-indexer/src/application/: adapters.rs  concurrent_container.rs  container.rs  content_processor.rs  indexing_service.rs  indexing_strategies.rs  interfaces.rs  mod.rs
services/doc-indexer/src/application/content_processing/: content_type.rs  detector.rs  handlers.rs  mod.rs  processor.rs  registry.rs
services/doc-indexer/src/application/services/: collection_service.rs  document_service.rs  filter_service.rs  health_service.rs  indexing_service.rs  mod.rs
services/doc-indexer/src/infrastructure/: analytics.rs  batch_operations.rs  collection_management.rs  concurrent_search.rs  enhanced_api.rs  enhanced_search.rs  mod.rs  search_enhancement.rs  stdio.rs  streaming.rs
services/doc-indexer/src/infrastructure/api/http/: handlers.rs  server.rs
services/doc-indexer/src/infrastructure/api/jsonrpc/: handlers.rs  mod.rs  server.rs  types.rs
services/doc-indexer/src/infrastructure/embeddings/: local_adapter.rs  mod.rs  openai_adapter.rs
services/doc-indexer/src/infrastructure/http/: handlers.rs  mod.rs  server.rs
services/doc-indexer/src/infrastructure/jsonrpc/: handlers.rs  mcp_methods.rs  mod.rs  server.rs  types.rs
services/doc-indexer/src/infrastructure/load_testing/: metrics.rs  mod.rs  runner.rs  scenario.rs
services/doc-indexer/src/infrastructure/memory/: benchmark.rs  cache.rs  intern.rs  mod.rs  pool.rs
services/doc-indexer/src/infrastructure/operations/: analytics.rs  mod.rs
services/doc-indexer/src/infrastructure/operations/production/: health.rs  mod.rs  monitoring.rs  shutdown.rs
services/doc-indexer/src/infrastructure/persistence/: mod.rs
services/doc-indexer/src/infrastructure/persistence/embeddings/: mod.rs
services/doc-indexer/src/infrastructure/persistence/vector/: embedded_adapter.rs  memory_adapter.rs
services/doc-indexer/src/infrastructure/production/: health.rs  mod.rs  monitoring.rs  startup.rs
services/doc-indexer/src/infrastructure/protocol_adapters/: jsonrpc.rs  rest.rs
services/doc-indexer/src/infrastructure/protocols/: streaming.rs
services/doc-indexer/src/infrastructure/vector/: embedded_adapter.rs  memory_adapter.rs  mod.rs  qdrant_adapter.rs  qdrant_adapter_new.rs  qdrant_adapter_old.rs
services/doc-indexer/tests/: smoke_cli.rs  smoke_cli_new.rs  smoke_cli_old.rs  test_enhanced_service.py  test_local_embedder.rs  test_minimal.rs  test_onnx_env.rs  test_search_filtering_integration.rs  test_session_builder.rs  test_tokenizer.rs  test_utils.rs
services/doc-indexer/tests/fixtures/: smoke_test_doc.txt
services/doc-indexer/tests/unit/: test_adapters.rs  test_indexing_service.rs  test_interfaces.rs  test_solid_basic.rs  test_strategies.rs
test/evaluation/: Cargo.toml  hybrid_search_evaluation.rs  labeled_dataset.json  main.rs  performance_regression_tests.rs
test/evaluation/src/: lib.rs  system_info.rs
(+320 files in other folders)
