[workspace]
members = [
    "crates/cli",
    "crates/zero-latency-config", 
    "crates/zero-latency-core",
    "crates/zero-latency-observability",
    "crates/zero-latency-search",
    "crates/zero-latency-vector",
    "crates/zero-latency-contracts",
    "crates/zero-latency-api",
    "services/doc-indexer",
]
resolver = "2"
