[package]
name = "mdx"
version = "0.1.0"
edition = "2021"
description = "Zero Latency Documentation Search CLI"
authors = ["Zero Latency Team"]
license = "MIT"

[[bin]]
name = "mdx"
path = "src/main.rs"

[dependencies]
# Shared Zero-Latency crates
zero-latency-core = { path = "../zero-latency-core" }
zero-latency-search = { path = "../zero-latency-search" }
zero-latency-config = { path = "../zero-latency-config" }
zero-latency-observability = { path = "../zero-latency-observability" }
zero-latency-contracts = { path = "../zero-latency-contracts" }

# CLI framework
clap = { version = "4.0", features = ["derive", "color"] }

# Async runtime and HTTP client
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Date/time handling
chrono = { version = "0.4", features = ["serde"] }

# UUID generation
uuid = { version = "1.0", features = ["v4"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Output formatting
colored = "2.0"
indicatif = "0.17"
comfy-table = "7.0"

# Configuration
dirs = "5.0"
config = "0.14"
toml = "0.8"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3.0"
