[package]
name = "zero-latency-api"
version = "1.0.0"
edition = "2021"
description = "Generated API types and client code for Zero-Latency services"
license = "MIT"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"

[build-dependencies]
# Note: Code generation is handled by external tools
# Build script will generate placeholder types if openapi-generator-cli is not available

[features]
default = ["client"]
client = []
server = []
