[package]
name = "zero-latency-core"
version = "0.1.0"
edition = "2021"
description = "Core domain models and traits for Zero-Latency"
license = "MIT"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
thiserror = "1.0"
async-trait = "0.1"

[features]
default = []
testing = ["uuid/fast-rng"]
