[package]
name = "zero-latency-observability"
version = "0.1.0"
edition = "2021"
description = "Observability patterns for Zero-Latency"
license = "MIT"

[dependencies]
zero-latency-core = { path = "../zero-latency-core" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
rand = "0.8"

# Unix-specific dependencies for system metrics
[target.'cfg(unix)'.dependencies]
libc = "0.2"

[features]
default = []
prometheus = []
jaeger = []
