[package]
name = "zero-latency-search"
version = "0.1.0"
edition = "2021"
description = "Search domain logic for Zero-Latency"
license = "MIT"

[dependencies]
zero-latency-core = { path = "../zero-latency-core" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
tokio = { version = "1.0", features = ["full"] }

[dev-dependencies]
tokio-test = "0.4"
