[package]
name = "search-quality-evaluation"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "evaluation_runner"
path = "main.rs"

[dependencies]
# Core dependencies
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }

# Statistics and randomization
fastrand = "2.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Zero Latency dependencies
zero-latency-core = { path = "../../crates/zero-latency-core" }
zero-latency-search = { path = "../../crates/zero-latency-search" }

[dev-dependencies]
tokio-test = "0.4"
